<resources>
    <string name="app_name">Git-M</string>
    <string name="no_internet">No internet available!</string>
    <string name="no_data">No data available…</string>
    <string name="no_open_prs">Looks like there are no open pull requests for this repository…</string>
    <string name="input_required">Enter an owner and repo to begin!</string>
    <string name="search_for_pull_requests">Search for pull requests</string>
    <string name="placeholder_pr_title">Pull request title</string>
    <string name="placeholder_pr_desc">Info</string>
    <string name="hint_owner">&lt;owner-name&gt;</string>
    <string name="separater">/</string>
    <string name="hint_repo">&lt;repository-name&gt;</string>
    <string name="owner_required">Owner required</string>
    <string name="repo_required">Repository required</string>
    <string name="check_owner_repo">Looks like the owner or repo doesn\'t exist</string>
    <string name="invalid_username">Owner name is invalid</string>
    <string name="info_api">API Used: https://developer.github.com/v3/</string>
    <string name="label_author">Author</string>
    <string name="info_author">Name: Nuzha Rukiya</string>
    <string name="info_author_git">Git: github/hzaun</string>
    <string name="placeholder_version">Version 1.0</string>
    <string name="app_version">Version %1$s</string>
    <string name="about">About</string>
    <string name="hint_clear">Hint: long press to clear fields!</string>
</resources>
