<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_medium"
            android:padding="@dimen/margin_medium">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/acivLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/margin_medium"
                android:paddingBottom="@dimen/margin_medium"
                app:srcCompat="@drawable/ic_git" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/acivLogo"
                android:layout_alignBottom="@id/acivLogo"
                android:layout_toEndOf="@id/acivLogo"
                android:paddingStart="@dimen/margin_medium"
                android:text="@string/about"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAPI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/acivLogo"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/info_api" />

            <TextView
                android:id="@+id/tvAuthorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAPI"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/label_author"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAuthorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAuthorLabel"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/info_author" />

            <TextView
                android:id="@+id/tvAuthorGit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAuthorName"
                android:text="@string/info_author_git" />

            <TextView
                android:id="@+id/tvVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAuthorGit"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/placeholder_version" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>